# aegis-croo

./: .gitignore  README.md
deploy/: Caddyfile.combined  ensure-aegis-caddy.sh
engine/: pyproject.toml
engine/aegis_engine/: app.py  audit.py  llm.py  models.py  source.py  static_analysis.py
engine/tests/: test_app.py  test_audit.py  test_llm.py  test_models.py  test_source.py  test_static_analysis.py
engine/tests/fixtures/: VulnerableVault.sol
provider/: .env.example  package-lock.json  package.json  tsconfig.json
provider/src/: engine.test.ts  engine.ts  listener.ts  report-link.test.ts  report-link.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/r/: route.ts
web/src/app/r/[id]/: page.tsx
web/src/app/report/: ReportPageClient.tsx  page.tsx
web/src/components/: ReportView.tsx
web/src/lib/: report.ts  store.ts
